@@ -5,6 +5,8 @@ import cn.hutool.core.date.DateTime;
 import com.calo.cmpp.module.RoundedPanel;
 import jakarta.annotation.PostConstruct;
 import lombok.extern.log4j.Log4j2;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Component;
 
 import javax.swing.*;
@@ -13,6 +15,7 @@ import java.awt.*;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 
 @Log4j2
 @Component
@@ -21,10 +24,10 @@ public class LogMonitor extends RoundedPanel implements MonitorWin {
     private final JTextArea logTextArea = new JTextArea();
     private final JScrollPane logScrollPane = new JScrollPane(logTextArea);
     // 链表，用于存储日志
-    private final List<String> logList = new LinkedList<>();
+    private final List<String> logList = new CopyOnWriteArrayList<>();
 
     {
-        this.setBorder(new EmptyBorder(10, 5, 10, 0));
+        this.setBorder(new EmptyBorder(5, 5, 5, 0));
         this.add(logScrollPane);
         this.add(logScrollPane, BorderLayout.CENTER);
     }
@@ -35,15 +38,14 @@ public class LogMonitor extends RoundedPanel implements MonitorWin {
         logTextArea.setLineWrap(true);
         logTextArea.setWrapStyleWord(true);
         logTextArea.setFont(new Font("微软雅黑", Font.PLAIN, 14));
-        logTextArea.setSize(1050, 590);
-        logTextArea.setMinimumSize(new Dimension(1050, 590));
-        logTextArea.setBackground(new Color(238, 238, 238));
+        logTextArea.setBackground(new Color(242,242,242));
         // 显示最下面
         logTextArea.setCaretPosition(logTextArea.getDocument().getLength());
         // 设置光标颜色
-        logTextArea.setCaretColor(new Color(238, 238, 238));
+        logTextArea.setCaretColor(new Color(242,242,242));
         // 去除边框
-        logScrollPane.setBorder(BorderFactory.createLineBorder(new Color(238, 238, 238)));
+        logScrollPane.setBorder(BorderFactory.createLineBorder(new Color(242,242,242)));
+        logTextArea.setBorder(BorderFactory.createLineBorder(new Color(242,242,242)));
         // 滚动时才显示滚动条
         logScrollPane.setHorizontalScrollBarPolicy(JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
         // 设置首选大小，以及文本区域的行数
@@ -78,9 +80,9 @@ public class LogMonitor extends RoundedPanel implements MonitorWin {
     }
 
     public void appendLog(String log) {
-        String logText = "[" + DateTime.now().toString("yyyy-MM-dd HH:mm:ss") + "] " + log + "\n\n";
-        if(logList.size() > 3000) {
-            logList.remove(0);
+        String logText = "[" + DateTime.now().toString("yyyy-MM-dd HH:mm:ss") + "] " + log + "\n";
+        if(logList.size() > 5000) {
+            logList.removeFirst();
         }
         logList.add(logText);
         logTextArea.append(logText);
